--- a/tym-service.plist
+++ b/tym-service.plist
@@ -2,14 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>Label</key>
-    <string>so.tym.cli.service</string>
-    <key>ProgramArguments</key>
-    <array>
-        <string>tym</string>
-        <string>start</string>
-    </array>
-    <key>KeepAlive</key>
-    <true/>
+	<key>KeepAlive</key>
+	<true/>
+	<key>Label</key>
+	<string>homebrew.mxcl.tym</string>
+	<key>ProgramArguments</key>
+	<array>
+		<string>/opt/homebrew/bin/tym</string>
+	</array>
+	<key>RunAtLoad</key>
+	<true/>
+	<key>StandardErrorPath</key>
+	<string>/opt/homebrew/var/log/tym.log</string>
+	<key>StandardOutPath</key>
+	<string>/opt/homebrew/var/log/tym.log</string>
 </dict>
 </plist>
