--- a/tym-service.plist
+++ b/tym-service.plist
@@ -16,5 +16,7 @@
 	<string>/opt/homebrew/var/log/tym.log</string>
 	<key>StandardOutPath</key>
 	<string>/opt/homebrew/var/log/tym.log</string>
+	<key>WorkingDirectory</key>
+	<string>/Users/behzad</string>
 </dict>
 </plist>
